--- a/lessons4/css/responsive.css
+++ b/lessons4/css/responsive.css
@@ -93,11 +93,13 @@
     }
 
     .action-cards {
-        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: stretch;
+        flex-wrap: wrap;
     }
 
     .action-card {
-        width: 100%;
+        width: 40%;
         flex-direction: row;
         align-items: center;
         padding: 5px;
@@ -162,6 +164,15 @@
     .button {
         padding: 2vw 4.5vw;
     }
+
+    .action-cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .action-card {
+        width: 350px;
+    }
 }
 
 @media screen and (max-width: 450px) {
@@ -205,5 +216,9 @@
 
     .navigation-block .donate {
         font-size: 3vw;
+    }
+
+    .action-card {
+        width: 90%;
     }
 }
